this issue is handled in backend and there's no need to interfere. also, footnote message in forgot-password was left aligned

--- a/src/app/feature/pages/ddx-forgot-password-page/ddx-forgot-password-page.component.scss
+++ b/src/app/feature/pages/ddx-forgot-password-page/ddx-forgot-password-page.component.scss
@@ -23,6 +23,14 @@
     form {
       width: 100%;
       max-width: 424px;
+
+      .description {
+        p.message {
+          &#message {
+            text-align: start;
+          }
+        }
+      }
     }
   }
 }
