--- a/src/app/feature/public/ddx-auth-pages.scss
+++ b/src/app/feature/public/ddx-auth-pages.scss
@@ -96,7 +96,7 @@
         }
 
         p.message {
-          text-align: end;
+          text-align: start;
         }
       }
     }
